[package]
name = "ip-api"
version = "1.0.0"
edition = "2024"
license-file = "LICENSE"
authors = ["xFanexx", "NotKeira"]

[dependencies]
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = "0.4.42"
dns-lookup = "3.0.1"
lazy_static = "1.5.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
